# other

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
pyengine/arrangement/: buffer.py  sampling.py  utils.py
pyengine/belief/: belief.py  buffer.py  masking.py  sampling.py  uniform.py
pyengine/core/: buffer.py  env.py  evaluation.py  rl.py  search.py  train_container.py
pyengine/networks/: arrangement_transformer.py  belief_transformer.py  exponential_weighted_average.py  feature_orchestration.py  last_moves_encoder.py  legacy_belief.py  legacy_init.py  legacy_rl.py  lstm_belief_transformer.py  move_transformer.py  temporal_belief_transformer.py  transformer_basics.py  utils.py  wrappers.py
pyengine/utils/: __init__.py  constants.py  distributed_checks.py  helper.py  init_helpers.py  load_pystratego.py  loading.py  logger.py  multi_counter.py  run_cfg.py  saver.py  slurm.py  stopwatch.py  types.py  validation.py
scripts/: submit.py
scripts/analysis/: linreg.py  marginal_values.py
scripts/collect/: collect_games.py
scripts/eval/: eval_argmax.py  eval_belief.py  eval_beta_search_vs_other.py  eval_checkpoints.py  eval_clamp.py  eval_curve_against_model.py  eval_divergence.py  eval_inits.py  eval_one_sided.py  eval_perfect_search_vs_bp.py  eval_search_vs_bp.py  eval_search_vs_other.py  eval_search_vs_search.py  eval_set_vs_one.py  eval_threshold.py  eval_vs_random.py  round_robin.py  round_robin_arrangements.py
scripts/profile/: profile_column_sampling.py  profile_cpu.py  profile_env.py  profile_masking.py  profile_temporal_transformer.py  profile_transformer.py
scripts/timers/: belief.py  search.py
scripts/train/: belief_main.py  remember_main.py  rl_main.py
scripts/vis/: arrangement_heatmaps.py
src/: pybind.cc  util.cu  util.h
src/env/: boardstate_channels.h  env_state.cu  env_state.h  game_saver.cu  game_saver.h  stratego.cu  stratego.h  stratego_board.cu  stratego_board.h  stratego_conf.cu  stratego_conf.h
src/env/cuda/: action_kernels.cu  board_kernels.cu  infostate_kernels.cu  kernels.h  snapshot_kernels.cu  termination_kernels.cu
src/env/inits/: jb_boards.h  jb_init_boards_barrage.cpp  produce_inits.py
src/env/rules/: chase_state.cu  chase_state.h  twosquare_state.cu  twosquare_state.h
tests/: continuous_chase.py  continuous_chase_new.py  instantiate_fail_game.txt  nv.py  old_buffer.py  test_action_transforms.py  test_alt_log_loss.py  test_arrangement_distribution_behavior.py  test_attack_planes.py  test_battle_planes.py  test_belief_mask.py  test_boardstate_channels.py  test_cemetery.py  test_chan_last.py  test_circular_buffer.py  test_continuous_chase.py  test_continuous_chase_new.py  test_cpu_mem_leak.py  test_dm_planes.py  test_env.py  test_env_state.py  test_far_action_history.py  test_free.py  test_gen_methods.py  test_infostate.py  test_initial_board_memory.py  test_instantiate.py  test_is_terminal_arrangement.py  test_last_attack.py  test_last_moves.py  test_last_moves_encoder.py  test_legal_action_consistency.py  test_log_prob_compression.py  test_magnet_policy.py  test_move_summary.py  test_new_planes.py  test_piece_arrangement_generator.py  test_piece_id.py  test_process_arr_data.py  test_process_data.py  (+15 more)
tests/continuous_chase_games/: game1.txt  game10.txt  game100.txt  game11.txt  game12.txt  game13.txt  game14.txt  game15.txt  game16.txt  game17.txt  game18.txt  game19.txt  game2.txt  game20.txt  game21.txt  game22.txt  game23.txt  game25.txt  game26.txt  game27.txt  game28.txt  game29.txt  game3.txt  game30.txt  game31.txt  game32.txt  game33.txt  game34.txt  game35.txt  game36.txt  game37.txt  game38.txt  game39.txt  game4.txt  game40.txt  game41.txt  game42.txt  game43.txt  game44.txt  game45.txt  (+59 more)
tests/continuous_chase_games_new/: game0.txt  game0_.txt  game1.txt  game10.txt  game100.txt  game101.txt  game102.txt  game103.txt  game104.txt  game105.txt  game106.txt  game107.txt  game108.txt  game10_.txt  game11.txt  game12.txt  game13.txt  game14.txt  game15.txt  game16.txt  game17.txt  game18.txt  game19.txt  game1_.txt  game2.txt  game20.txt  game21.txt  game22.txt  game23.txt  game24.txt  game25.txt  game26.txt  game27.txt  game28.txt  game29.txt  game2_.txt  game3.txt  game30.txt  game31.txt  game32.txt  (+80 more)
tests/strategus_games/: attack_chase.txt
